2009-12-27  Neal Walfield  <neal@randal>

	* configure.ac: Check for sqlite3 and prefer it if available.
	Define HAVE_SQLITE_VERSION appropriately.
	* src/Makefile.am (starling_SOURCES): Add sqlite.h.
	(starling_catalog_SOURCES): Likewise.
	* src/sqlite.h: New file.
	* src/utils.h: Include "sqlite.h", not <sqlite.h>.
	* src/musicdb.c (busy_handler): Only use the second parameter if
	HAVE_SQLITE_VERSION is 2.

2009-12-27  Neal Walfield  <neal@gnu.org>

	* configure.ac: Sanitize Hildon and Maemo environment detection.
	* src/Makefile.am (starling_CFLAGS): Don't add $(HILDON_CFLAGS).
	(starling_LDADD): Don't add $(HILDON_LIBS).
	* src/main.c: Change use of IS_HILDON to HAVE_HILDON and
	HILDON_VER to HAVE_HILDON_VERSION.
	* src/player.c (playbin_ensure): Likewise.
	* src/starling.c: Likewise.

2009-12-27  Neal Walfield  <neal@gnu.org>

	* src/starling.c (PROGRAM_NAME): Define to the program name.
	(ERROR_DOMAIN): Use it instead of a string.
	(starling_run): Likewise.
	(set_title): Likewise.  Also place the program name at the end of
	the title bar, not the start.

2009-12-23  Neal Walfield  <neal@gnu.org>

	* src/starling.c (playlist_alpha_seek_build): Always return a
	value.  Make code clearer.

2009-12-23  Neal Walfield  <neal@gnu.org>

	* src/starling.c (playlist_alpha_seek_build): Don't display the
	alpha seek bar if there are no entries.

2009-12-15  Neal H. Walfield  <neal@gnu.org>

	* src/player.c (playbin_ensure): Add some debugging output.

2009-12-15  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (struct _Starling): Add fields
	playlist_alpha_seek, playlist_alpha_current_height, and
	playlist_alpha_seek_timer_source.
	(playlist_alpha_seek_build): New function.
	(playlist_alpha_seek_build_queue): Likewise.
	(playlist_alpha_seek_build_queue_size_allocate): Likewise.
	(playlist_alpha_seek_clicked): Likewise.
	(search_text_regen): Call playlist_alpha_seek_build_queue.
	(starling_run): Create a vbox next to the library view, which acts
	an as alpha seeker.
